# sliils

./: .env.example  .gitignore  .prettierignore  Caddyfile  LICENSE  README.md  docker-compose.yml  eslint.config.js  mkdocs.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/workflows/: ci.yml
apps/desktop/: README.md  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/mobile/: README.md  app.json  package.json
apps/server/: .dockerignore  .env.example  .golangci.yml  Dockerfile  go.mod  go.sum  sqlc.yaml
apps/server/migrations/: 20260423000001_init_auth.sql  20260423000002_sliils_app_role.sql  20260423000003_workspaces.sql  20260423000004_ws_select_created_by.sql  20260423000005_messages.sql  20260423000006_channels_rls_discoverable.sql  20260423000007_channel_memberships.sql  20260423000008_mentions.sql  20260423000009_files.sql  embed.go  (+12 more)
apps/web/: index.html  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
config/: livekit-dev.yaml
docs/: index.md
docs/admin/: export.md  members.md  retention.md
docs/apps/: block-kit.md  bot-api.md  oauth.md  overview.md  quickstart.md  slash-commands.md  webhooks.md
docs/kickoff/: README.md  architecture.md  assumptions.md  glossary.md  implementation-roadmap.md  project-plan.md  requirements.md  research-report.md  risk-register.md  tech-spec.md  ui-spec.md  workflows.md
docs/reference/: api.md  schema.md  ws.md
docs/self-hosting/: local-dev.md  production.md  security-checklist.md
(+223 files in other folders)
