[package]
name = "sliils-desktop"
version = "0.0.0"
description = "SliilS desktop app"
authors = ["SliilS contributors"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "sliils_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
